<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imgViewDescription"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/photo_of_person_holding_pen_1028726_large" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:textSize="24sp" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/button01"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="numberInput"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/button02"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="numberInput"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/button03"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numberInput"
                    android:text="@string/_3"
                    android:autoSizeTextType="uniform" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="#FFB74D"
                    android:onClick="operator"
                    android:text="@string/plus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/button04"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="numberInput"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/button05"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="numberInput"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/button06"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="numberInput"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/buttonMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="#FFB74D"
                    android:onClick="operator"
                    android:text="@string/minus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/button07"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="numberInput"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/button08"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="numberInput"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/button09"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="numberInput"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/buttonMultiply"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="#FFB74D"
                    android:onClick="operator"
                    android:text="@string/multiply" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="#FF8A65"
                    android:onClick="cancel"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="numberInput"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/buttonEquals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="#AED581"
                    android:onClick="equals"
                    android:text="@string/equals" />

                <Button
                    android:id="@+id/buttonDivide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="#FFB74D"
                    android:onClick="operator"
                    android:text="@string/divide" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>